--- a/main.css
+++ b/main.css
@@ -37,7 +37,8 @@ body {
 header{
     height: 7%;
     width: 100%;
-    position:fixed;
+    z-index: 1;
+    position: fixed;
     color: #F6F6F6;
     left: 0;
     right: 0;
@@ -47,6 +48,7 @@ header{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
 }
 header .header .rightButton{
     display: flex;
@@ -84,7 +86,8 @@ header .header p {
     height: 80%;
     clip-path: circle(35% at center);
     align-self: center;
-
+    z-index: 0;
+    position: relative;
 }
 .nome{
     text-align: center;
@@ -152,7 +155,7 @@ header .header p {
 .imagem-do-Projeto{
     width: 100%;
     height: auto;
-    position: block;
+    position: relative;
 }
 .projeto .titulo{
     top: 0;
@@ -179,10 +182,10 @@ header .header p {
     width: 100%;
     display: grid;
     flex-direction: column;
-    grid-template-columns: 66% 18%;
+    grid-template-columns: 66% 25%;
     justify-content: space-between;
 }   
-.button {
+.botao, .button {
     color: white;
     display: inline-block;
     background-color: #202122;
@@ -196,7 +199,7 @@ header .header p {
     background-color: #18191c;
 }
 .mostrarMais{
-    align-self: end;
+    align-self: center;
 }
 /*Linguágens*/
 .projeto .linguagensProjeto{
@@ -234,4 +237,47 @@ header .header p {
         grid-template-rows: 1fr 1fr 1fr;
 
     }
+}
+
+
+
+/* Estilos para o modal */
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+    z-index: 4;
+
+}
+
+/* Conteúdo do modal */
+.modal-content {
+    background-color: #0c0909;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #F4F440;
+    width: 80%;
+}
+
+/* Fechar o botão */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
